--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,9 @@
 
     <!-- Font Awesome -->
     <link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-/>
-
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
 
     <!-- Open Graph (Facebook, WhatsApp) -->
     <meta property="og:title" content="Muqaddas Travels - Trusted Umrah Packages UK" />
@@ -36,8 +35,8 @@
       content="Affordable & reliable Umrah packages from the UK. Visa, Transport & Accommodation included."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.muqaddastravels.com/" />
-    <meta property="og:image" content="https://www.muqaddastravels.com/logo.png" />
+    <meta property="og:url" content="https://www.muqaddastravels.co.uk/" />
+    <meta property="og:image" content="https://www.muqaddastravels.co.uk/logo.png" />
 
     <!-- Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -46,7 +45,7 @@
       name="twitter:description"
       content="Trusted Umrah travel agency offering affordable and complete Umrah packages from the UK."
     />
-    <meta name="twitter:image" content="https://www.muqaddastravels.com/logo.png" />
+    <meta name="twitter:image" content="https://www.muqaddastravels.co.uk/logo.png" />
 
     <!-- Manifest -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -57,8 +56,8 @@
         "@context": "https://schema.org",
         "@type": "TravelAgency",
         "name": "Muqaddas Travels",
-        "url": "https://www.muqaddastravels.com/",
-        "logo": "https://www.muqaddastravels.com/logo.png",
+        "url": "https://www.muqaddastravels.co.uk/",
+        "logo": "https://www.muqaddastravels.co.uk/logo.png",
         "contactPoint": {
           "@type": "ContactPoint",
           "telephone": "+44 20 38219 282",
